--- a/templates/approval_comments.html
+++ b/templates/approval_comments.html
@@ -4,30 +4,47 @@
 {% load static %}
 
 <h3>Comments for approval</h3>
+<form method="POST">
+{% csrf_token %}
 {% for comment in object_list %}
-   
+    <p>
+        <input type="checkbox" name="approve[]" value="{{comment.id}}" id="{{comment.id}}" class="filled-in" checked="checked" />
+        <label for="{{comment.id}}">
+            <span>
                 <p>{{ comment.name }} | {{ comment.created_on }}</p> 
                 <p>{{ comment.comment_field }}</p>
                 <p>{{ comment.post }}</p>
-  
+            </span>
+        </label>
+    </p>
 {% empty %}
     <p>There are no comments for approval</p>
 {% endfor %}
-
+    <button type="submit" name="approve" class="btn">Approve</button>
+    
+</form>
 
 <h3>Approved comments</h3> 
-
-
+<form method="POST">
+{% csrf_token %}
 {% for comment in approved_comments %}
-
-    <p>{{ comment.name }} | {{ comment.created_on }}</p> 
-    <p>{{ comment.comment_field }}</p>
-    <p>{{ comment.post }}</p>
-
+<p>
+    <input type="checkbox" name="delete[]" value="{{comment.id}}" id="{{comment.id}}" class="filled-in"/>
+    <label for="{{comment.id}}">
+        <span>
+            <p>{{ comment.name }} | {{ comment.created_on }}</p> 
+            <p>{{ comment.comment_field }}</p>
+            <p>{{ comment.post }}</p>
+        </span>
+    </label>
+</p>
     
 {% empty %}
     <p>There are no approved comments yet</p>
 {% endfor %}
+<button type="submit" name="delete" class="btn">Delete</button>
+</form>
+
 
  
 
